# nextgen

./: .clang-format  .clang_complete  .gitattributes  .gitignore  .gitmodules  .oclint  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  arg_types.h  child.c  child.h  crypto.c  crypto.h  disas.c  disas.h  entry.h  freebsd_shim.c  freebsd_syscall_table.h  generate.c  generate.h  get-aclocal.sh  install.sh  license  license.md  license.txt  log.c  log.h  mac_osx_syscall_table.h  mutate.c  mutate.h  network.c  network.h  nextgen  nextgen.c  nextgen.h  private.h  probe.c  (+17 more)
doc/: debug.md  update-deps.md
libmacho/: Makefile  command.c  command.h  macho.c  macho.h  section.c  section.h  segment.c  segment.h  symbol.c  symbol.h  symtab.c  symtab.h
nextgen.dSYM/Contents/: Info.plist
src/: AppDelegate.m  arg_types.c  arg_types.h  child.c  child.h  concurrent.c  concurrent.h  context.h  crypto.c  crypto.h  disas.c  disas.h  entry.h  file.c  file.h  freebsd_syscall_table.h  generate.c  generate.h  genetic.c  genetic.h  io.c  io.h  job.h  log.c  log.h  mac_osx_syscall_table.h  main.c  main.m  memory.c  memory.h  mutate.c  mutate.h  network.c  network.h  nextgen.c  nextgen.h  platform.h  plugin.c  plugin.h  probe.c  (+19 more)
src/concurrent/: Makefile  concurrent-common.c  concurrent-freebsd.c  concurrent-freebsd.h  concurrent-mac.c  concurrent-mac.h  concurrent.c  concurrent.h  epoch.c  epoch.h  libnxconcurrent  thread.c  thread.h
src/crypto/: Makefile  crypto.c  crypto.h  hash.c  hash.h  random.c  random.h
src/depend-inject/: depend-inject.c  depend-inject.h
src/disas/: Makefile  disas-freebsd.c  disas-freebsd.h  disas-linux.c  disas-mac.c  disas-mac.h  disas.c  disas.h
src/emu/: emu-macos.c  emu.c  emu.h
src/file/: Makefile  file-freebsd.c  file-freebsd.h  file-linux.c  file-mac.h  file-mac.m  file.c  file.h
src/genetic/: Makefile  genetic.c  genetic.h
src/io/: Makefile  io.c  io.h
src/log/: Makefile  log-freebsd.c  log-freebsd.h  log-mac.c  log-mac.h  log.c  log.h
src/memory/: Makefile  memory.c  memory.h
src/mutate/: Makefile  mutate.c  mutate.h
src/network/: Makefile  network-bsd.c  network-linux.c  network.c  network.h
src/objc/: AppDelegate.h  AppDelegate.m  Makefile  objc-utils.h  objc-utils.m
src/plugins/: Makefile  plugin.c
src/probe/: Makefile  probe-freebsd.c  probe-freebsd.h  probe-linux.c  probe-mac.c  probe-mac.h  probe.c  probe.h
src/reaper/: Makefile  reaper.c  reaper.h
src/resource/: Makefile  resource.c  resource.h
src/runtime/: Makefile  fuzzer-syscall.c  fuzzer.c  fuzzer.h  nextgen.c  nextgen.h  platform.h  runtime.c  runtime.h
src/syscall/: Makefile  arg_types.c  arg_types.h  child.c  child.h  context.h  entry.h  freebsd_syscall_table.h  generate-macos.c  generate.c  generate.h  linux_syscall_table.h  mac_osx_syscall_table.h  set_test.c  set_test.h  signals.c  signals.h  syscall-freebsd.c  syscall-freebsd.h  syscall-linux.c  syscall-mac.c  syscall-mac.h  syscall-macos.c  syscall.c  syscall.h  syscall.h.gch  syscall_table.h
src/syscall/freebsd/: entry_chdir.c  entry_chmod.c  entry_close.c  entry_creat.c  entry_fchdir.c  entry_getfsstat.c  entry_link.c  entry_lseek.c  entry_mknod.c  entry_mount.c  entry_open.c  entry_ptrace.c  entry_read.c  entry_recvmsg.c  entry_setuid.c  entry_unlink.c  entry_unmount.c  entry_wait4.c  entry_write.c  syscall_list.h
src/syscall/linux/: entry_read.c  syscall_list.h
src/syscall/mac/: darwin_table.h  entry___disable_threadsignal.c  entry___mac_execve.c  entry___mac_get_fd.c  entry___mac_get_file.c  entry___mac_get_link.c  entry___mac_get_mount.c  entry___mac_get_pid.c  entry___mac_get_proc.c  entry___mac_getfsstat.c  entry___mac_mount.c  entry___mac_set_fd.c  entry___mac_set_file.c  entry___mac_set_link.c  entry___mac_set_proc.c  entry___mac_syscall.c  entry___old_semwait_signal.c  entry___old_semwait_signal_nocancel.c  entry___pthread_canceled.c  entry___pthread_chdir.c  entry___pthread_fchdir.c  entry___pthread_kill.c  entry___pthread_markcancel.c  entry___pthread_sigmask.c  entry___semwait_signal.c  entry___semwait_signal_nocancel.c  entry___sigwait.c  entry___sigwait_nocancel.c  entry_abort_with_payload.c  entry_accept.c  entry_accept_nocancel.c  entry_access.c  entry_access_extended.c  entry_acct.c  entry_adjtime.c  entry_aio_cancel.c  entry_aio_error.c  entry_aio_fsync.c  entry_aio_read.c  entry_aio_return.c  (+362 more)
src/syscall/windows/: entry_read.c  syscall_list.h
src/syscalls/freebsd/: entry_chdir.c  entry_chmod.c  entry_close.c  (+17 more)
src/utils/: Makefile  SetProcessName.c  autoclose.h  autofree.h  colors.h  deprecate.h  noreturn.h  private.h  reallocarray.c  set_process_name.c  utils-linux.c  utils-mac.h  utils-mac.m  utils-macos.c  utils-win.c  utils.c  utils.h
syscalls/: README.md
syscalls/freebsd/: entry_chdir.c  entry_chmod.c  entry_close.c  entry_creat.c  entry_fchdir.c  entry_getfsstat.c  entry_link.c  entry_mknod.c  entry_open.c  entry_read.c  entry_unlink.c  entry_wait4.c  entry_write.c  syscall_list.h
syscalls/mac/: entry_chmod.c  entry_close.c  entry_fchdir.c  entry_link.c  entry_mknod.c  entry_unlink.c  entry_write.c
tests/: Makefile  test_map.c  test_map.h  test_suite  test_utils.c  test_utils.h  tests.c
tests/concurrent/: Makefile  test_concurrent  test_concurrent.c
tests/crypto/: Makefile  test_crypto  test_crypto.c
tests/file/: Makefile  test_file  test_file.c
tests/generate/: Makefile  test_generate  test_generate.c
tests/genetic/: Makefile  test_genetic  test_genetic.c
tests/log/: Makefile  test_crypto  test_log  test_log.c
tests/memory/: Makefile  test_memory  test_memory.c
tests/network/: Makefile  test_network  test_network.c
tests/parser/: Makefile  test_cmd_parser.c  test_parser
tests/plugin/: Makefile  test_plugins  test_plugins.c
tests/reaper/: Makefile  test_reaper  test_reaper.c
tests/resource/: Makefile  test_resource  test_resource.c
tests/runtime/: Makefile  test_runtime  test_runtime.c
tests/syscall/: Makefile  test_syscall  test_syscall.c
tests/utils/: Makefile  test_utils  test_utils.c
tools/: ci-macos-before-install.sh
(+60 files in other folders)
